[package]
name = "amm-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"]}
serde_json = "*"
near-sdk = "3.1.0"
uint = {version = "0.8.5", default-features = false }
